123/MyProject/src/objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>